--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,5 +4,9 @@
       "files": ["*.ts", "*.tsx"],
       "parser": "@typescript-eslint/parser"
     }
-  ]
+  ],
+  "rules": {
+    "no-var": "off",
+    "@typescript-eslint/no-empty-object-type": "off" // or you can use 0 instead of "off"
+  }
 }
