--- a/package.json
+++ b/package.json
@@ -48,5 +48,10 @@
     "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "eslintConfig": {
+    "rules": {
+        "no-var": 0
+    }
+}
 }
