--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://imranasumbul1211:3jLQ7n7qWKq1GpfW@cluster0.1qsaf.mongodb.net/social-media-app?retryWrites=true&w=majority&appName=cluster0"
-NEXTAUTH_JWT_SECRET=jwt-secret-social-media-app
-NEXTAUTH_SECRET=nextauth-secret-social-media-app
-NEXTAUTH_URL=http://localhost:3000/login
+NEXTAUTH_JWT_SECRET="jwt-secret-social-media-app"
+NEXTAUTH_SECRET="nextauth-secret-social-media-app"
+
