--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/themes": "^3.1.4",
     "@types/bcrypt": "^5.0.2",
     "@typescript-eslint/parser": "^8.10.0",
     "axios": "^1.7.7",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
@@ -34,13 +35,13 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-spinners": "^0.14.1",
-    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "unique-names-generator": "^4.7.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
