--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
       "parser": "@typescript-eslint/parser"
     },
     {
-      "files": ["**/next-auth.d.ts"],  // Targeting only next-auth.d.ts
+      "files": ["**/next-auth.d.ts", "**/authOptions.ts"],  // Targeting only next-auth.d.ts
       "rules": {
         "@typescript-eslint/no-unused-vars": "off",  // Disable the unused-vars rule
         "@typescript-eslint/no-explicit-any": "off"  // Optional: Disable explicit-any rule
